status icon alignment fixed
status icon alignment fixed

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -16,14 +16,6 @@
     font-display: swap;
 }
 
-@font-face {
-    font-family: 'Avenir Book';
-    src: url('../fonts/Avenir-BookOblique.woff2') format('woff2'),
-        url('../fonts/Avenir-BookOblique.woff') format('woff');
-    font-weight: normal;
-    font-style: italic;
-    font-display: swap;
-}
 
 @font-face {
     font-family: 'Avenir Heavy';
@@ -43,8 +35,6 @@
     font-style: normal;
     font-display: swap;
 }
-
-
 
 @font-face {
     font-family: 'Avenir Medium';
