--- a/css/style.css
+++ b/css/style.css
@@ -262,7 +262,7 @@ h5 {
     border-radius: 10px;
     display: inline-block;
     position: relative;
-    top: 5px;
+    top: 3px;
 }
 
 .section-grid,
